#4170 Removed the 'position: relative;' style from the .collapse class because it was causing issues when dragging/dropping, but doesn't seem to be necessary.

--- a/docs/assets/css/bootstrap.css
+++ b/docs/assets/css/bootstrap.css
@@ -2737,7 +2737,6 @@ table .span24 {
 }
 
 .collapse {
-  position: relative;
   height: 0;
   overflow: hidden;
   -webkit-transition: height 0.35s ease;
